--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           command: npm --prefix src run production
           name: build node_modules
       - save_cache:
-          key: assets-{{ checksum "src/packege-lock.json" }}
+          key: assets-{{ checksum "src/package-lock.json" }}
           paths:
             - src/public
           name: assets save cache
