refactor: scssのコンパイル設定を修正等

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -3,7 +3,7 @@
 /public/hot
 /public/storage
 /public/js/*.js
-/public/css/*.css
+/public/css/**/*.css
 /public/mix-manifest.json
 /storage/*.key
 /vendor
