--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
           name: composer restore cache
       - restore_cache:
           keys:
-            - assets-{{ checksum "src/package-lock.json" }}
+            - assets-${ CI_BUILD_ID }
           name: assets restore cache
 
 jobs:
@@ -87,7 +87,7 @@ jobs:
           command: npm --prefix src run production
           name: build node_modules
       - save_cache:
-          key: assets-{{ checksum "src/package-lock.json" }}
+          key: assets-${ CI_BUILD_ID }
           paths:
             - src/public
           name: assets save cache
@@ -143,7 +143,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - assets-{{ checksum "src/package-lock.json" }}
+            - assets-${ CI_BUILD_ID }
           name: assets restore cache
       - run:
           command: |
@@ -153,19 +153,19 @@ jobs:
           name: build iamges
       - run:
           command: |
-            APP_ECR_URL="${AWS_ECR_ACCOUNT_URL}/borderless-gym"
-            docker tag borderless-gym/app:latest "${APP_ECR_URL}/app:${CIRCLE_SHA1}"
-            docker tag borderless-gym/nginx:latest "${APP_ECR_URL}/nginx:${CIRCLE_SHA1}"
+            APP_ECR_URL="${ AWS_ECR_ACCOUNT_URL }/borderless-gym"
+            docker tag borderless-gym/app:latest "${ APP_ECR_URL }/app:${CIRCLE_SHA1}"
+            docker tag borderless-gym/nginx:latest "${ APP_ECR_URL }/nginx:${CIRCLE_SHA1}"
           name: set image tag
       - aws-cli/install
       - aws-cli/setup
       - aws-ecr/ecr-login
       - aws-ecr/push-image:
           repo: "borderless-gym/app"
-          tag: "${CIRCLE_SHA1}"
+          tag: "${ CIRCLE_SHA1 }"
       - aws-ecr/push-image:
           repo: "borderless-gym/nginx"
-          tag: "${CIRCLE_SHA1}"
+          tag: "${ CIRCLE_SHA1 }"
 
 workflows:
   version: 2
