--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
           name: composer restore cache
       - restore_cache:
           keys:
-            - "assets-${CI_BUILD_ID}"
+            - assets-{{ .Revision }}
           name: assets restore cache
 
 jobs:
@@ -87,7 +87,7 @@ jobs:
           command: npm --prefix src run production
           name: build node_modules
       - save_cache:
-          key: "assets-${CI_BUILD_ID}"
+          key: assets-{{ .Revision }}
           paths:
             - src/public
           name: assets save cache
@@ -143,7 +143,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - "assets-${CI_BUILD_ID}"
+            - assets-{{ .Revision }}
           name: assets restore cache
       - run:
           command: |
