--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,7 @@ jobs:
       - run:
           command: |
             docker-compose run laravel cp ./.env.example ./.env
+            docker-compose run laravel composer dump-autoload
             docker-compose run laravel php artisan migrate --seed
             docker-compose run laravel php artisan config:cache
             docker-compose run laravel php artisan view:cache
