fix：migrationのファイル名変更時に読み込まれるようcommand追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,9 @@ jobs:
       - checkout
       - restore_build_cache
       - run:
-          command: docker-compose run laravel cp ./.env.example ./.env
+          command: |
+            docker-compose run laravel cp ./.env.example ./.env
+            docker-compose run laravel composer dump-autoload
           name: create env file
       - run:
           command: docker-compose run laravel php artisan key:generate
