--- a/src/.env.example
+++ b/src/.env.example
@@ -4,7 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
+ENABLE_SQL_LOG=true
+ENABLE_REQUEST_LOG=true
 
 DB_CONNECTION=mysql
 DB_HOST=gym-mysql
