--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
         "install": "^0.13.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "resize-observer-polyfill": "^1.5.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.10",
         "sass-loader": "^8.0.2",
