--- a/src/package.json
+++ b/src/package.json
@@ -36,5 +36,8 @@
     "dependencies": {
         "vuetify": "^2.3.4",
         "vuex": "^3.5.1"
-    }
+    },
+    "browserslist": [
+        "defaults"
+    ]
 }
